data/forge_javadoc/1.7.10/raw/net/minecraft/util/IChatComponent.Serializer.md
---
title: "IChatComponent.Serializer"
description: "public static class IChatComponent.Serializer extends java.lang.Object"
package: "net/minecraft/util"
version: "1.7.10"
forgeBuild: "10.13.4.1614"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.7.10-10.13.4.1614/net/minecraft/util/IChatComponent.Serializer.html"
sourceType: javadoc
---

# IChatComponent.Serializer

**Inheritance:** java.lang.Object → net.minecraft.util.IChatComponent.Serializer

## Class signature

```java
public static class IChatComponent.Serializer extends java.lang.Object
```

## Constructors

- `Serializer()`

## Methods

- `IChatComponent deserialize(JsonElement p_deserialize_1_, java.lang.reflect.Type p_deserialize_2_, JsonDeserializationContext p_deserialize_3_)`
- `static java.lang.String func_150696_a(IChatComponent p_150696_0_)`
- `static IChatComponent func_150699_a(java.lang.String p_150699_0_)`
- `JsonElement serialize(IChatComponent p_serialize_1_, java.lang.reflect.Type p_serialize_2_, JsonSerializationContext p_serialize_3_)`
- `JsonElement serialize(java.lang.Object p_serialize_1_, java.lang.reflect.Type p_serialize_2_, JsonSerializationContext p_serialize_3_)`
