data/forge_javadoc/1.8.9/raw/net/minecraft/util/IChatComponent.Serializer.md
---
title: "IChatComponent.Serializer"
description: "public static class IChatComponent.Serializer extends java.lang.Object"
package: "net/minecraft/util"
version: "1.8.9"
forgeBuild: "11.15.1.2318"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.8.9-11.15.1.2318/net/minecraft/util/IChatComponent.Serializer.html"
sourceType: javadoc
---

# IChatComponent.Serializer

**Inheritance:** java.lang.Object → net.minecraft.util.IChatComponent.Serializer

## Class signature

```java
public static class IChatComponent.Serializer extends java.lang.Object
```

## Constructors

- `Serializer()`

## Methods

- `static java.lang.String componentToJson(IChatComponent component)`
- `IChatComponent deserialize(JsonElement p_deserialize_1_, java.lang.reflect.Type p_deserialize_2_, JsonDeserializationContext p_deserialize_3_)`
- `static IChatComponent jsonToComponent(java.lang.String json)`
- `JsonElement serialize(IChatComponent p_serialize_1_, java.lang.reflect.Type p_serialize_2_, JsonSerializationContext p_serialize_3_)`
